# cooper

./: .gitignore  .gitmodules  Cargo.toml  Makefile  common.mk
.cargo/: config.toml
data/shaders/: pbr_frag.glsl  static_pbr_vert.glsl
shaders/: common_inc.glsl  cube_frag.glsl  cube_vert.glsl  geom_vis_frag.glsl  minimal_vert.glsl  static_vert.glsl  texture_frag.glsl  texture_vert.glsl  triangle_frag.glsl  triangle_vert.glsl  trivial_frag.glsl  trivial_vert.glsl
src/alloc/: Cargo.toml  README.md
src/asset/: Cargo.toml
src/asset/src/: asset.rs  error.rs  gltf.rs  lib.rs  scene.rs
src/base/: Cargo.toml
src/base/src/: bitfield.rs  by_ptr.rs  enum_vec.rs  lib.rs  name.rs  node.rs  ops.rs  partial_enum_map.rs  pool.rs  request.rs  sentinel.rs
src/chalice_base/: Cargo.toml
src/chalice_device/: Cargo.toml  README.md
src/chalice_device/src/: commands.rs  debug.rs  device.rs  extent.rs  format.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  loader.rs  pipeline.rs  queue.rs  render_pass.rs  shader.rs  staged_cache.rs  swapchain.rs  sync.rs  testing.rs  util.rs  vertex.rs  window.rs
src/chalice_device/src/descriptor/: layout.rs  set.rs
src/chalice_device/src/memory/: alloc.rs  buffer.rs  buffer_heap.rs  image.rs  staging.rs
src/chalice_engine/: Cargo.toml
src/chalice_engine/src/: commands.rs  descriptor.rs  engine.rs  framebuffer.rs  lib.rs  staging.rs  utils.rs
src/chalice_examples/: Cargo.toml
src/chalice_examples/src/: lib.rs
src/chalice_spirv/: Cargo.toml  data
src/common/: Cargo.toml
src/cooper_main/: Cargo.toml
src/cooper_main/shaders/: sprite.vert.glsl  sprite.vert.spv
src/cooper_main/src/: main.rs  window.rs
src/cooper_main/src/render/: memory.rs  mod.rs
src/core/: Cargo.toml
src/core/src/: by_ptr.rs  enum_vec.rs  hash_vec.rs  lib.rs  macros.rs  node.rs  ops.rs  pool.rs  request.rs  sentinel.rs
src/demos/: Cargo.toml  Makefile  README.md
src/demos/shaders/: common.inc  triangle_vert.glsl
src/demos/src/: descriptor.rs  frame.rs  graphics.rs  init.rs  lib.rs  main.rs  master.rs  memory.rs  object.rs  render_path.rs  sprite.rs  stats.rs  texture.rs
src/device/: Cargo.toml
src/device/src/: commands.rs  debug.rs  device.rs  extent.rs  format.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  loader.rs  pipeline.rs  queue.rs  render_pass.rs  sampler.rs  shader.rs  staged_cache.rs  swapchain.rs  sync.rs  testing.rs  util.rs  vertex.rs  window.rs
src/device/src/descriptor/: count.rs  layout.rs  mod.rs  pool.rs  set.rs
src/device/src/memory/: alloc.rs  buffer.rs  buffer_heap.rs  image.rs  mod.rs  staging.rs
src/examples/: Cargo.toml
src/examples/src/: lib.rs
src/gfx/: Cargo.toml  Makefile
src/gfx/examples/: debug.rs  gltf.rs  simple.rs  trivial.rs
src/gfx/examples/common/: gltf.rs  mod.rs
src/gfx/shaders/: common_inc.glsl  debug_depth_frag.glsl  debug_frag.glsl  example_inc.glsl  example_vert.glsl  global_inc.glsl  minimal_vert.glsl  simple_frag.glsl  static_vert.glsl  texture_vis_frag.glsl  triangle_frag.glsl  trivial_frag.glsl  trivial_inc.glsl  trivial_vert.glsl
src/gfx/src/: descriptor.rs  extent.rs  format.rs  frame.rs  framebuffer.rs  global.rs  image.rs  lib.rs  material.rs  mesh.rs  patch.rs  pipeline.rs  render_loop.rs  render_pass.rs  rloop.rs  sampler.rs  scheduler.rs  shader.rs  staged_cache.rs  state.rs  testing.rs  triangle.rs  util.rs  vertex.rs  world.rs
src/gfx/src/device/: commands.rs  debug.rs  descriptor.rs  device.rs  framebuffer.rs  image.rs  instance.rs  local.rs  manager.rs  memory.rs  mod.rs  pipeline.rs  queue.rs  render_pass.rs  sampler.rs  shader.rs  swapchain.rs  sync.rs  vertex.rs  xfer.rs
src/gfx/src/device/descriptor/: count.rs  layout.rs  mod.rs  pool.rs  set.rs
src/gfx/src/device/memory/: alloc.rs  buffer.rs  heap.rs  image.rs  mod.rs  staging.rs
src/gfx/src/material/: geom.rs  mod.rs  simple.rs  state.rs  system.rs  texture.rs
src/gfx/src/object/: item.rs  mod.rs  objects.rs
src/gfx/src/render/: debug.rs  instance.rs  mod.rs  scene.rs  scheduler.rs  trivial.rs  view.rs  world_render.rs
src/gfx/src/resource/: manager.rs  mod.rs  scheduler.rs  staging.rs  state.rs  system.rs  xfer.rs
src/gfx/tests/: upload.rs
src/gfx/tests/common/: mod.rs
src/graphics/: Cargo.toml
src/graphics-vulkan/: Cargo.toml
src/graphics-vulkan/examples/: scene.rs  triangle.rs
src/graphics-vulkan/examples/common/: mod.rs
src/graphics-vulkan/shaders/: cube_vert.glsl  example_frag.glsl  example_inc.glsl  example_vert.glsl  triangle_frag.glsl  triangle_vert.glsl
src/graphics-vulkan/src/: arena.rs  debug.rs  descriptor.rs  draw.rs  frame.rs  geom.rs  image.rs  init.rs  lib.rs  master.rs  memory.rs  object.rs  objects_core.rs  parameter.rs  pipeline.rs  render_loop.rs  render_pass.rs  render_path.rs  resource.rs  shader.rs  sprite.rs  staging.rs  stats.rs  sys.rs  testing.rs  texture.rs  uniforms.rs  xfer.rs
src/graphics-vulkan/src/cor/: commands.rs  config.rs  debug.rs  descriptor.rs  device.rs  frame.rs  framebuffer.rs  image.rs  init.rs  manager.rs  memory.rs  mod.rs  objects.rs  pipeline.rs  render_pass.rs  shader.rs  staging.rs  swapchain.rs  xfer.rs
src/main/: Cargo.toml  README.md
src/main/src/: asset.rs  main.rs  window.rs
src/main/src/render/: memory.rs  mod.rs
src/math/: Cargo.toml  README.md
src/math/src/: bbox.rs  lib.rs  linear.rs  macros.rs  matrix.rs  mesh.rs  quaternion.rs  traits.rs  uvector.rs  vector.rs
src/render/: Cargo.toml  README.md
src/render/src/: descriptor.rs  fixed.rs  geom.rs  init.rs  lib.rs  memory.rs  pipeline.rs  resource.rs
src/tinker/: Cargo.toml
src/tinker/src/: lib.rs
src/tinker_math/: Cargo.toml
src/tinker_math/src/: bbox.rs  lib.rs  matrix.rs  quaternion.rs  uvector.rs  vector.rs
src/unit/: Cargo.toml  README.md
src/unit/examples/: vanilla.rs
src/unit/src/: context.rs  filter.rs  lib.rs  macros.rs  reporter.rs
src/unit/tests/: cli.rs  config.rs  module.rs  vanilla.rs
src/unit/tests/tests/: mod.rs  vanilla.rs
src/window/: Cargo.toml  README.md
src/window/examples/: hello.rs
src/window/src/: lib.rs  testing.rs
(+45 files in other folders)
