[package]
name = "cooper-base"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
crossbeam-channel = "0.4.2"
derive_more = "0.15"
derivative = "2.1.1"
enum-map = "0.6"
fnv = "1.0"
num = { path = "../num", package = "cooper-num" }
prelude = { path = "../prelude", package = "cooper-prelude" }
