[package]
name = "chalice-device"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
base = { path = "../chalice_base", package = "chalice-base" }
bitflags = "1.2.1"
byteorder = "1.3.4"
derive_more = "0.99.9"
derivative = "2.1.1"
enum-map = "0.6.1"
fnv = "1.0"
log = "0.4.8"
itertools = "0.8.2"
math = { path = "../tinker_math", package = "tinker-math" }
more-asserts = "0.2.1"
parking_lot = "0.9"
smallvec = { version = "1.4.0", features = ["union", "const_generics"] }
spv = { path = "../chalice_spirv", package = "chalice-spirv" }
anyhow = "1.0.33"
winit = "0.28.1"
libloading = "0.7.4"

[dependencies.vk]
git = "https://github.com/matthew-mcallister/vk-ffi"
package = "vulkan-headers"

[dependencies.vkl]
git = "https://github.com/matthew-mcallister/vk-ffi"
package = "vulkan-loader"

[dev-dependencies]
env_logger = "0.7.1"
lazy_static = "1.4.0"
