[package]
name = "chalice-examples"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
base = { path = "../chalice_base", package = "chalice-base" }
device = { path = "../chalice_device", package = "chalice-device" }
engine = { path = "../chalice_engine", package = "chalice-engine" }
env_logger = "0.10.0"
image = "0.24.5"
math = { path = "../tinker_math", package = "tinker-math" }
smallvec = "1.10.0"
tinker = { path = "../tinker" }
winit = "0.28.1"

[dependencies.vk]
git = "https://github.com/matthew-mcallister/vk-ffi"
package = "vulkan-headers"

[[bin]]
name = "triangle"
