[package]
name = "cooper-core"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
crossbeam-channel = "0.3"
derive_more = "0.15"
derivative = "^1.0"
enum-map = "0.6"
fnv = "^1.0"
prelude = { path = "../prelude", package = "cooper-prelude" }
