[package]
name = "cooper-device"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[lib]
harness = false

[dependencies]
base = { path = "../base", package = "cooper-base" }
bitflags = "1.2.1"
byteorder = "1.3.4"
derive_more = "0.99.9"
derivative = "2.1.1"
enum-map = "0.6.1"
fnv = "1.0"
log = "0.4.8"
itertools = "0.8.2"
math = { path = "../math", package = "cooper-math" }
more-asserts = "0.2.1"
parking_lot = "0.9"
num = { path = "../num", package = "cooper-num" }
prelude = { path = "../prelude", package = "cooper-prelude" }
smallvec = { version = "1.4.0", features = ["union", "const_generics"] }
spv = { path = "../spirv", package = "cooper-spirv" }
unit = { path = "../unit", package = "cooper-unit" }
window = { path = "../window", package = "cooper-window" }

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vulkan-headers"

[dependencies.vkl]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vulkan-loader"

[dev-dependencies]
env_logger = "0.7.1"
