[package]
name = "cooper-examples"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
asset = { path = "../asset", package = "cooper-asset" }
anyhow = "1.0.32"
base = { path = "../base", package = "cooper-base" }
bitflags = "1.2.1"
derive_more = "0.99.7"
derivative = "2.1.1"
device = { path = "../device", package = "cooper-device" }
enum-map = "0.6.1"
env_logger = "0.7.1"
fnv = "1.0"
gfx = { path = "../gfx", package = "cooper-gfx" }
log = "0.4.8"
math = { path = "../math", package = "cooper-math" }
more-asserts = "0.2.1"
owning_ref = "0.4"
parking_lot = { version = "0.9", features = ["owning_ref"] }
num = { path = "../num", package = "cooper-num" }
prelude = { path = "../prelude", package = "cooper-prelude" }
smallvec = { version = "1.4.0", features = ["union", "const_generics"] }
spv = { path = "../spirv", package = "cooper-spirv" }
unit = { path = "../unit", package = "cooper-unit" }

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vulkan-headers"
