[package]
name = "cooper-gfx"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[lib]
harness = false

[dependencies]
base = { path = "../base", package = "cooper-base" }
bitflags = "^1.2.1"
crossbeam = "^0.7.3"
derive_more = "0.15"
derivative = "^1.0.3"
enum-map = "^0.6.1"
fnv = "1.0"
itertools = "^0.8.2"
na = { version = "0.18", package = "nalgebra" }
math = { path = "../math", package = "cooper-math" }
owning_ref = "0.4"
parking_lot = { version = "0.9", features = ["owning_ref"] }
prelude = { path = "../prelude", package = "cooper-prelude" }
unit = { path = "../unit", package = "cooper-unit" }
window = { path = "../window", package = "cooper-window" }

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vulkan-headers"

[dependencies.vkl]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vulkan-loader"
