[package]
name = "cooper-gfx"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[lib]
harness = false

[dependencies]
base = { path = "../base", package = "cooper-base" }
bitflags = "1.2.1"
derive_more = "0.99.7"
derivative = "2.1.1"
device = { path = "../device", package = "cooper-device" }
enum-map = "0.6.1"
fnv = "1.0"
log = "0.4.8"
math = { path = "../math", package = "cooper-math" }
more-asserts = "0.2.1"
owning_ref = "0.4"
parking_lot = { version = "0.9", features = ["owning_ref"] }
num = { path = "../num", package = "cooper-num" }
prelude = { path = "../prelude", package = "cooper-prelude" }
smallvec = { version = "1.4.0", features = ["union", "const_generics"] }
spv = { path = "../spirv", package = "cooper-spirv" }
anyhow = "1.0.33"

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vulkan-headers"

[dev-dependencies]
anyhow = "1.0.28"
env_logger = "0.7.1"
fehler = "1.0.0"
gltf = { version = "0.15.1", features = ["import"] }

[[test]]
name = "upload"
harness = false
