[package]
name = "cooper-graphics-vulkan"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ccore = { path = "../core", package = "cooper-core" }
prelude = { path = "../prelude", package = "cooper-prelude" }
window = { path = "../window", package = "cooper-window" }

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vk-ffi"

[dependencies.vkl]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vk-ffi-loader"
