[package]
name = "cooper-graphics-vulkan"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[lib]
harness = false

[dependencies]
ccore = { path = "../core", package = "cooper-core" }
derive_more = "0.15"
prelude = { path = "../prelude", package = "cooper-prelude" }
unit = { path = "../unit", package = "cooper-unit" }
window = { path = "../window", package = "cooper-window" }

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vk-ffi"

[dependencies.vkl]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vk-ffi-loader"
