[package]
name = "cooper-main"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
common = { path = "../common", package = "cooper-common" }
derivative = "1"
derive_more = "0.14"
fnv = "1"
lodepng = "2.4"
memoffset = "0.5"
gfx = { path = "../graphics-vulkan", package = "cooper-graphics-vulkan" }
walkdir = "2"
win = { path = "../window", package = "cooper-window" }

# TODO: Remove
[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi"
package = "vk-ffi"

[[bin]]
name = "cooper"
path = "src/main.rs"
