[package]
name = "cooper-math"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
base = { path = "../base", package = "cooper-base" }
derivative = "2.1.1"
derive_more = "0.99.9"
itertools = "0.9.0"
num = { path = "../num", package = "cooper-num" }
