[package]
name = "cooper-render"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
alloc = { path = "../alloc", package = "cooper-alloc" }
derivative = "1.0"
derive_more = "0.14"
maplit = "1.0"
memoffset = "0.3"
window = { path = "../window", package = "cooper-window" }

[dependencies.glfw]
git = "https://gitlab.com/matthew-mcallister/glfw-ffi.git"
package = "glfw-ffi"

[dependencies.vk]
git = "https://gitlab.com/matthew-mcallister/vk-ffi.git"
package = "vk-ffi"

[dependencies.vkl]
git = "https://gitlab.com/matthew-mcallister/vk-ffi.git"
package = "vk-ffi-loader"
