[package]
name = "cooper-unit"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
clap = "^2.33.0"
derivative = "^1.0.3"
derive_more = "0.15"
enum-map = "0.6"

[[test]]
name = "vanilla"
harness = false

[[test]]
name = "module"
harness = false

[[test]]
name = "config"
harness = false
