[package]
name = "cooper-unit"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
clap = "2.33.0"
derivative = "2.1.1"
derive_more = "0.99.11"
enum-map = "0.6"
regex = "1.3.5"

[lib]
harness = false

[[test]]
name = "vanilla"
harness = false

[[test]]
name = "module"
harness = false

[[test]]
name = "cli"
harness = false
